# Federated_unlearning_evaluation

./: .gitignore  README.md
fl-disagreement-resolution/: .gitignore  LICENSE  README.md  RUNNING_EXPERIMENTS.md  UNLEARNING_METRICS_GUIDE.md  fl_orchestrator.py  fl_orchestrator_sklearn.py  pyproject.toml
fl-disagreement-resolution/examples/: README.md  demo_custom_dataset.py  demo_custom_fl_round.py  demo_federated_exact_retraining.py  demo_sisa_checkpoint.py
fl-disagreement-resolution/fl_client/: __init__.py  client.py  main.py  training.py  utils.py
fl-disagreement-resolution/fl_client_sklearn/: __init__.py  client.py  training.py
fl-disagreement-resolution/fl_module/: __init__.py  base.py  model_registry.py  models.py  partitioning.py  registry.py
fl-disagreement-resolution/fl_server/: __init__.py  aggregation.py  branching.py  disagreement.py  evaluation.py  main.py  server.py  unlearning_strategies.py  utils.py
fl-disagreement-resolution/fl_server_sklearn/: __init__.py  aggregation.py  disagreement.py  evaluation.py  server.py
fl-disagreement-resolution/mock_etcd/: config_schema.py  configuration.json  configuration_adult_full.json  configuration_adult_full_noniid.json  configuration_cifar10.json  configuration_heavy.json  configuration_mnist_full.json  configuration_mnist_full_noniid.json  configuration_sklearn_test.json  etcd_loader.py  test_federated_disagreements.json  test_federated_exact_retraining.json
fl-disagreement-resolution/scripts/: aggregate_full_data.py  aggregate_grid_results.py  compare_fl_runs.py  consolidate_noniid.py  fl_runs.py  (+12 more)
(+127 files in other folders)
